# translate-bot

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml  settings.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: config.py  database.py  main.py
app/activitypub/: actor.py  handlers.py  keys.py
app/models/: follower.py
app/services/: note_store.py  queue.py  translate.py
scripts/: generate_keys.py
tests/: conftest.py  test_actor_and_keys.py  test_database.py  test_follwer.py  test_handlers.py  test_inbox_worker.py  test_main.py  test_translate.py
translate_bot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
workers/: inbox_worker.py
