[project]
name        = "translate-bot"
version     = "1.0.0"
description = "ActivityPub translation bot powered by apkit"
requires-python = ">=3.12"

dependencies = [
    "apkit[server]>=0.3.8,<0.4",  # fixar minor — API ainda instável
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "dynaconf>=3.2",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "beautifulsoup4>=4.12",
]

# Scripts declarados aqui ficam disponíveis como comandos
# após `uv sync`, sem precisar ativar o venv manualmente.
[project.scripts]
gen-keys     = "scripts.generate_keys:main"

# Dependências exclusivas de desenvolvimento — não entram no build de produção
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest-cov>=7.0.0",
    "asgi-lifespan>=2.1.0",
]

[tool.uv]
# Garante que uv.lock inclua hashes para todas as dependências —
# importante para ambientes de produção e auditorias de segurança.
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.setuptools.packages.find]
include = ["app*", "workers*"]
exclude = ["keys*", "scripts*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
